# noontide-emu

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  main.rs  motherboard.rs  msg.rs  pdb.rs  serial.rs  sync_unsafe_cell.rs
src/noontide-emu/: cpu.rs  main.rs  mem.rs  serial.rs
src/noontide-perf/: main.rs
