[package]
name = "noontide-emu"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
bincode = "1.3.3"
bus = "2.3.0"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.1"
itertools = "0.10.5"
tui = "0.19.0"

[features]
debugger = []

[[bin]]
name = "noontide-emu"
path = "src/noontide-emu/main.rs"

[[bin]]
name = "noontide-perf"
path = "src/noontide-perf/main.rs"